@@ -41,23 +41,19 @@ module Spec
       it "should fail when receiving message specified as not to be received" do
         @mock.should_not_receive(:not_expected)
         @mock.not_expected
-        begin
+        lambda {
           @mock.rspec_verify
           violated
-        rescue MockExpectationError => e
-          e.message.should == "Mock 'test mock' expected :not_expected with (any args) 0 times, but received it once"
-        end
+        }.should raise_error(MockExpectationError, "Mock 'test mock' expected :not_expected with (any args) 0 times, but received it once")
       end
       
       it "should fail when receiving message specified as not to be received with args" do
         @mock.should_not_receive(:not_expected).with("unexpected text")
         @mock.not_expected("unexpected text")
-        begin
+        lambda {
           @mock.rspec_verify
           violated
-        rescue MockExpectationError => e
-          e.message.should == "Mock 'test mock' expected :not_expected with (\"unexpected text\") 0 times, but received it once"
-        end
+        }.should raise_error(MockExpectationError, "Mock 'test mock' expected :not_expected with (\"unexpected text\") 0 times, but received it once")
       end
       
       it "should pass when receiving message specified as not to be received with wrong args" do
@@ -86,21 +82,17 @@ module Spec
       
       it "should raise exception if args dont match when method called" do
         @mock.should_receive(:something).with("a","b","c").and_return("booh")
-        begin
+        lambda {
           @mock.something("a","d","c")
           violated
-        rescue MockExpectationError => e
-          e.message.should == "Mock 'test mock' expected :something with (\"a\", \"b\", \"c\") but received it with (\"a\", \"d\", \"c\")"
-        end
+        }.should raise_error(MockExpectationError, "Mock 'test mock' expected :something with (\"a\", \"b\", \"c\") but received it with (\"a\", \"d\", \"c\")")
       end
            
       it "should fail if unexpected method called" do
-        begin
+        lambda {
           @mock.something("a","b","c")
           violated
-        rescue MockExpectationError => e
-          e.message.should == "Mock 'test mock' received unexpected message :something with (\"a\", \"b\", \"c\")"
-        end
+        }.should raise_error(MockExpectationError, "Mock 'test mock' received unexpected message :something with (\"a\", \"b\", \"c\")")
       end
         
       it "should use block for expectation if provided" do
@@ -115,22 +107,29 @@ module Spec
         
       it "should fail if expectation block fails" do
         @mock.should_receive(:something) {| bool | bool.should be_true}
-        begin
+        lambda {
           @mock.something false
-        rescue MockExpectationError => e
-          e.message.should match(/Mock 'test mock' received :something but passed block failed with: expected true, got false/)
-        end
+        }.should raise_error(MockExpectationError, /Mock 'test mock' received :something but passed block failed with: expected true, got false/)
       end
         
-      it "should fail when method defined as never is received" do
+      it "should fail right away when method defined as never is received" do
+        pending "Used to pass (false positive). Which one is wrong, the spec or the actual behavior?"
+
         @mock.should_receive(:not_expected).never
-        begin
+        lambda {
           @mock.not_expected
-        rescue MockExpectationError => e
-          e.message.should == "Mock 'test mock' expected :not_expected 0 times, but received it 1 times"
-        end
+        }.should raise_error(MockExpectationError, "Mock 'test mock' expected :not_expected 0 times, but received it 1 times")
       end
       
+      it "should eventually fail when method defined as never is received" do
+        @mock.should_receive(:not_expected).never
+        @mock.not_expected
+          
+        lambda {
+          @mock.rspec_verify
+        }.should raise_error(MockExpectationError, "Mock 'test mock' expected :not_expected with (any args) 0 times, but received it once")
+      end
+
       it "should raise when told to" do
         @mock.should_receive(:something).and_raise(RuntimeError)
         lambda do
@@ -141,42 +140,38 @@ module Spec
       it "should raise passed an Exception instance" do
         error = RuntimeError.new("error message")
         @mock.should_receive(:something).and_raise(error)
-        begin
+        lambda {
           @mock.something
-        rescue RuntimeError => e
-          e.message.should eql("error message")
-        end
+        }.should raise_error(RuntimeError, "error message")
       end
       
       it "should raise RuntimeError with passed message" do
         @mock.should_receive(:something).and_raise("error message")
-        begin
+        lambda {
           @mock.something
-        rescue RuntimeError => e
-          e.message.should eql("error message")
-        end
+        }.should raise_error(RuntimeError, "error message")
       end
        
       it "should not raise when told to if args dont match" do
         @mock.should_receive(:something).with(2).and_raise(RuntimeError)
-        lambda do
+        lambda {
           @mock.something 1
-        end.should raise_error(MockExpectationError)
+        }.should raise_error(MockExpectationError)
       end
        
       it "should throw when told to" do
         @mock.should_receive(:something).and_throw(:blech)
-        lambda do
+        lambda {
           @mock.something
-        end.should throw_symbol(:blech)
+        }.should throw_symbol(:blech)
       end
       
       it "should raise when explicit return and block constrained" do
-        lambda do
+        lambda {
           @mock.should_receive(:fruit) do |colour|
             :strawberry
           end.and_return :apple
-        end.should raise_error(AmbiguousReturnError)
+        }.should raise_error(AmbiguousReturnError)
       end
       
       it "should ignore args on any args" do
@@ -190,20 +185,16 @@ module Spec
       
       it "should fail on no args if any args received" do
         @mock.should_receive(:something).with(no_args())
-        begin
+        lambda {
           @mock.something 1
-        rescue MockExpectationError => e
-          e.message.should == "Mock 'test mock' expected :something with (no args) but received it with (1)"
-        end
+        }.should raise_error(MockExpectationError, "Mock 'test mock' expected :something with (no args) but received it with (1)")
       end
 
       it "should fail when args are expected but none are received" do
         @mock.should_receive(:something).with(1)
-        begin
+        lambda {
           @mock.something
-        rescue MockExpectationError => e
-          e.message.should == "Mock 'test mock' expected :something with (1) but received it with (no args)"
-        end
+        }.should raise_error(MockExpectationError, "Mock 'test mock' expected :something with (1) but received it with (no args)")
       end
       
       it "should yield 0 args to blocks that take a variable number of arguments" do
@@ -303,33 +294,27 @@ module Spec
       
       it "should fail when calling yielding method with wrong arity" do
         @mock.should_receive(:yield_back).with(no_args()).once.and_yield('wha', 'zup')
-          begin
+        lambda {
           @mock.yield_back {|a|}
-        rescue MockExpectationError => e
-          e.message.should == "Mock 'test mock' yielded |\"wha\", \"zup\"| to block with arity of 1"
-        end
+        }.should raise_error(MockExpectationError, "Mock 'test mock' yielded |\"wha\", \"zup\"| to block with arity of 1")
       end
       
       it "should fail when calling yielding method consecutively with wrong arity" do
         @mock.should_receive(:yield_back).once.with(no_args()).once.and_yield('wha', 'zup').
                                                                     and_yield('down').
                                                                     and_yield(14, 65)
-          begin
+        lambda {
           a, b = nil
           c = []
           @mock.yield_back {|a,b| c << [a, b]}
-        rescue MockExpectationError => e
-          e.message.should == "Mock 'test mock' yielded |\"down\"| to block with arity of 2"
-        end
+        }.should raise_error(MockExpectationError, "Mock 'test mock' yielded |\"down\"| to block with arity of 2")
       end
       
       it "should fail when calling yielding method without block" do
         @mock.should_receive(:yield_back).with(no_args()).once.and_yield('wha', 'zup')
-        begin
+        lambda {
           @mock.yield_back
-        rescue MockExpectationError => e
-          e.message.should == "Mock 'test mock' asked to yield |[\"wha\", \"zup\"]| but no block was passed"
-        end
+        }.should raise_error(MockExpectationError, "Mock 'test mock' asked to yield |[\"wha\", \"zup\"]| but no block was passed")
       end
       
       it "should be able to mock send" do
@@ -341,11 +326,11 @@ module Spec
       it "should be able to raise from method calling yielding mock" do
         @mock.should_receive(:yield_me).and_yield 44
         
-        lambda do
+        lambda {
           @mock.yield_me do |x|
             raise "Bang"
           end
-        end.should raise_error(StandardError)
+        }.should raise_error(StandardError, "Bang")
       
         @mock.rspec_verify
       end
@@ -356,11 +341,9 @@ module Spec
           @mock.should_receive(:foobar)
           @mock.foobar
           @mock.rspec_verify
-          begin
+          lambda {
             @mock.foobar
-          rescue MockExpectationError => e
-            e.message.should == "Mock 'test mock' received unexpected message :foobar with (no args)"
-          end
+          }.should raise_error(MockExpectationError, "Mock 'test mock' received unexpected message :foobar with (no args)")
         end
       end
       
